<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_layout"
    android:scrollbars="none"
    android:background="@color/app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sip_setting"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/sip_ip"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sip_ip_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="20"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/sip_ip_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/sip_port"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sip_port_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/sip_port_text"
                android:textColorHint="@color/set_hint_color"
                android:inputType="number"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/sip_id"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sip_id_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="20"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/sip_id_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/sip_pwd"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sip_pwd_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/sip_pwd_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/local_id"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/local_id_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="20"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/local_id_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/local_port"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/local_port_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/local_port_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/heart_time"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/heart_time_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/heart_time_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/payload_type"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/payload_type_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/payload_type_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <TextView
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dimen_10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/web_setting"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/web_ip"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/web_ip_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/web_ip_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/web_port"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/web_port_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/web_port_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <LinearLayout
            android:background="@color/white"
            android:padding="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:text="@string/socket_port"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="13sp"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/socket_port_text"
                android:cursorVisible="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHint="@color/set_hint_color"
                android:hint="@string/socket_port_text"
                android:background="@null"
                android:textCursorDrawable="@null" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_color"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_20dp"
            android:background="@color/white"/>

        <Button
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_80dp"
            android:layout_gravity="center"
            android:id="@+id/save_btn"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_view"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/save_setting"/>

    </LinearLayout>

</ScrollView>