<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_layout"
    android:orientation="vertical"
    android:background="@color/app_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@color/white"
        android:padding="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:text="@string/old_pwd"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/old_pwd_text"
            android:layout_weight="1"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/old_pwd_text"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/set_hint_color"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <LinearLayout
        android:background="@color/white"
        android:padding="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:text="@string/new_pwd"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/new_pwd_text"
            android:layout_weight="1"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/new_pwd_text"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/set_hint_color"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <LinearLayout
        android:background="@color/white"
        android:padding="@dimen/dimen_10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:text="@string/new_pwd_again"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <EditText
            android:id="@+id/new_pwd_again_text"
            android:layout_weight="1"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:hint="@string/new_pwd_again_text"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/set_hint_color"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_20dp"
        android:background="@color/white"/>

    <Button
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_gravity="center"
        android:id="@+id/confirm_btn"
        android:layout_width="@dimen/dimen_300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_btn_view"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/confirm_changes"/>

</LinearLayout>